--- a/15-redux-intro/package.json
+++ b/15-redux-intro/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
